# example-service-kueue

./: .gitignore  .pre-commit-config.yaml  README.md  app_configuration.json  octue.yaml  pyproject.toml  setup.cfg  twine.json
.github/workflows/: cd.yml  codeql.yml  python-ci.yml  release.yml
example_service_kueue/: app.py  submodule.py
terraform/: .terraform.lock.hcl  google_apis.tf  kubernetes.tf  kubernetes_cluster.tf  kubernetes_iam.tf  kubernetes_kueue.tf  main.tf  variables.tf
terraform/kueue_manifests/: cluster_queue.yaml
tests/: test_app.py  test_deployment.py
